--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,9 @@
-create_tweet.erb
+<h3>Tweet:</h3>
+<form action="/tweets" method="POST">
+  <label>Content:</label> <input type="textarea" name="content" id="content">
+  <br></br>
+
+  <input type="submit" value="submit">
+
+
+</form>
