--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,6 @@
-show_tweet.erb
+<%=@tweet.content%><br></br>
+<a href="/tweets/<%=@tweet.id%>/edit"> <input type="submit" value="Edit Tweet"> </a>
+<form action="<%=@tweet.id%>/delete" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete Tweet">
+</form>
