--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,7 @@
-Welcome, 
+Welcome, <%=@user.username%>
+<br></br>
+
+<% Tweet.all.each do |tweet| %>
+  <li><%= tweet.content %></li>
+  <% end %>
+
