--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,4 +1,4 @@
 <form action="/tweets/<%= @tweet.id %>" method="post">
   <input type="text" name="content" value="<%= @tweet.content %>">
-  <button type="submit" name="submti">submit</button>
+  <button type="submit" >submit</button>
 </form>
