--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,5 +1,3 @@
 <h4><%=@tweet.content if @tweet%></h4>
-<form action="/tweet/<%=@tweet.id%>" method="POST">
-  <button type="delete" value="delete">Delete Tweet</button>
-  <button type="edit" value="edit">Edit Tweet</button>
-</form>
+<a href="/tweet/<%=@tweet.id%>/edit">Edit Tweet</a>
+<a href="/tweet/<%=@tweet.id%>/delete">Delete Tweet</a>
