--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,5 @@
 <p>
-  Hello, <%= @user.username %>.  You are logged in
+  Welcome, <%= @user.username %>.  You are logged in
 </p>
 
 <% Tweet.all.each do |tweet| %>
