--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,10 +1,14 @@
-<%= @tweet.content %>
-<br><br>
-<form action="/tweets/<%= @tweet.id %>/delete" method="post">
-  <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete Tweet">
+<h2>Show Tweet</h2>
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+<p>
+  <%= @tweet.content %>
+</p>
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 </form>
-<br>
-<form action="/tweets/<%= @tweet.id %>/edit" method="get">
-  <input type="submit" value="Edit Tweet">
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
 </form>
