--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,5 +3,5 @@
 <form action="/login" method="post">
   <p>Username: <input type="text" name="username" id="Username"></p>
   <p>Password: <input type="text" name="password" id="Password"></p>
-  <p><input type="submit" value="Submit"></p>
+  <p><input type="submit" id="submit" value="Submit"></p>
 </form>
