--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,5 @@
 <h2>Welcome, <%= current_user.username %></h2>
-<% Tweet.all.each do |tweet| %>
+<% @tweets.each do |tweet| %>
   <h3><a href="tweets/<%= tweet.id%>"><%= tweet.content %></a> - <a href="/users/<%= tweet.user.slug %>"><%= tweet.user.username %></a></h3>
 <% end %>
 <br>
