--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,13 +2,12 @@
 <% if flash.has?(:message) %>
   <%= flash[:message] %>
 <% end %>
-<p>
-  <%= @tweet.content %>
-</p>
-<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
-</form>
+
+<p><%= @tweet.content %></p>
 
 <form action="/tweets/<%= @tweet.id %>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
+
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
