--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,9 +1,7 @@
 <h2>Edit Tweet</h2>
-<% if flash.has?(:message) %>
-  <%= flash[:message] %>
-<% end %>
-<form action="/tweets/<%= @tweet.id %>/edit" method="post">
-  <input id="hidden" type="hidden" name="_method" value="patch">
-  <input type="text" name="content" value="<%= @tweet.content %>" id="content"><br>
+
+<form method="post" action="/tweets/<%=@tweet.id%>">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
+  <input type="text" name="content" value="<%= @tweet.content %>">
   <input type="submit" value="submit">
 </form>
