--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,6 +1,21 @@
-<h2>Welcome, <%= current_user.username %></h2>
+<h3> Welcome <%= current_user.username %></h3>
+<h4> Tweets </h4>
+
+<% @tweets.each do |tweet| %>
+  <div>
+    <%= tweet.content %>
+  </div>
+<% end %>
+
+
+
+
+
+
+<!-- <h2>Welcome, <%= current_user.username %></h2>
+<h4>Tweets</h4>
 <% @tweets.each do |tweet| %>
   <h3><a href="tweets/<%= tweet.id%>"><%= tweet.content %></a> - <a href="/users/<%= tweet.user.slug %>"><%= tweet.user.username %></a></h3>
 <% end %>
 <br>
-<a href="/tweets/new">Create Tweet</a>
+<a href="/tweets/new">Create Tweet</a> -->
