--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<h2>Log In</h2>
+<h2>Log In to Your Account</h2>
 
 <form action="/login" method="post">
   <p>Username: <input type="text" name="username" id="Username"></p>
