--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -3,6 +3,6 @@
 <form action="/signup" method="post">
   <input type="text" name="username" id="username">
   <input type="text" name="email" id="email">
-  <input type="text" name="password" id="password">
+  <input type="password" name="password" id="password">
   <input type="submit" value="Sign Up">
 </form>
