--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,5 @@
 <h1>Welcome to Fwitter</h1>
+
+<a href="/login">Log in</a>
+
+<p>Not a Member?, not a problem! sign up <a href="/signup">here</a></p>
