--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,9 @@
-<h1>Welcome, <%= current_user.username %></h1>
+<h1>Welcome, <%= current_user.username.capitalize %></h1>
 
 <% @tweets.each do |tweet| %>
   <p><%= tweet.content %></p>
 <% end %>
+
+<a href="/tweets/new">Create a new tweet</a><br></br>
+
+<a href="/logout">Log out</a>
