--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -9,7 +9,7 @@
       <%tweet = Tweet.find(params[:id])%>
       <%=tweet.content%></br>
         <a href='/tweets/<%=tweet.id%>/edit'>Edit Tweet.</a></br>
-        <form class="" action='/tweets/<%=params[:id]%>/delete' method="post">
+        <form class="" action='/tweets/#{tweet.id}/delete' method="post">
           <input type="hidden" name="_method" value="delete">
           <input type="submit" name="Delete Tweet" value="Delete Tweet" id="Delete Tweet">
         </form>
@@ -17,7 +17,7 @@
       <%Tweet.all.each do |tweet|%>
           <%=tweet.content%></br>
           <a href='/tweets/<%=tweet.id%>/edit'>Edit Tweet.</a></br>
-          <form class="" action='/tweets/<%=params[:id]%>/delete' method="post">
+          <form class="" action='/tweets/<%=tweet.id%>/delete' method="post">
             <input type="hidden" name="_method" value="delete">
             <input type="submit" name="Delete Tweet" value="Delete Tweet" id="Delete Tweet">
           </form>
@@ -25,3 +25,4 @@
     <%end%>
   </body>
 </html>
+}
