--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -4,8 +4,14 @@
 
   <input type="text" name="tweet[content]" placeholder="<%=@tweet.content%>" id="content">
 <br></br>
-  <input type="submit" value="edit" id="submit">
-
-
+  <input type="submit" value="Edit Tweet" id="submit">
 </form>
+<br></br>
+<form method="post" action="/tweets/<%= @tweet.id %>/delete">
+  <input type="submit" value="Delete Tweet" id="Delete Tweet">
+</form>
+<br></br>
+<form method="get" action="/tweets">
 
+  <input type="submit" value="See All Tweets" >
+</form>
