--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,12 +2,21 @@
 
 <h3><%=@tweet.content%> - <%=@user.username%></h3>
 
-  <p>Click this link to <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+<form action='/tweets/<%=@tweet.id%>' method="POST">
 
+  <input type="text" name="tweet[content]" placeholder="<%=@tweet.content%>" id="content">
+  <br></br>
 
+  <input type="submit" value="Edit Tweet" id="submit">
+</form>
+<br></br>
 <form method="post" action="/tweets/<%= @tweet.id %>/delete">
-
   <input type="submit" value="Delete Tweet" id="Delete Tweet">
+</form>
+<br></br>
+<form method="get" action="/tweets">
+
+  <input type="submit" value="See All Tweets" >
 </form>
 
 
