--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -2,5 +2,5 @@
 <form action="/login" method="post">
   <input type="text" name="username" id="username">
   <input type="password" name="password" id="password">
-  <input type="submit" value="Login">
+  <input type="submit" value="Login" id="submit">
 </form>
