--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to Fwitter</h1>
 
-<a href="#">create a new user</a><br></br>
+<a href="/signup">create a new user</a><br></br>
 or<br></br>
-<a href="#">login</a>
+<a href="/login">login</a>
