--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,9 @@
+<br></br>
+<br></br>
+
 <form method="post" action="/signup">
-  username:<input type="text" name="username"><br></br>
-  email:<input type="text" name="email"><br></br>
-  password:<input type="text" name="password"><br></br>
+  <input type="text" name="username" value="username"><br></br>
+  <input type="text" name="email" value="email"><br></br>
+  <input type="text" name="password" value="password"><br></br>
   <input type="submit" value="create new user">
 </form>
