--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,7 @@
-hybrid
+<form action="/login" method="POST">
+  <label for="username">Username: </label>
+  <input type="text" name="username">
+  <label for="password">Password: </label>
+  <input type="text" name="password">
+  <input type="submit" value="submit">
+</form>
