--- a/app/views/tweet/tweets.erb
+++ b/app/views/tweet/tweets.erb
@@ -1,7 +1,6 @@
-<h2> Tweets </h2>
-
 <% @tweets.each do |tweet| %>
-  <div>
-    <a href="/tweets/<%=tweet.id%>"><%= tweet.content %></a>
-  </div>
+  <div class="blog-post">
+    <h2 class="blog-post-title"><a href="/tweets/<%=tweet.id%>"><%= tweet.content %></a></h2>
+    <p class="blog-post-meta">@<%=User.find(tweet.user_id).username%></p>
+  </div><!-- /.blog-post -->
 <% end %>
