--- a/app/views/tweet/show_tweet.erb
+++ b/app/views/tweet/show_tweet.erb
@@ -3,15 +3,14 @@
   <p class="blog-post-meta">@<%=User.find(@tweet.user_id).username%></p>
 </div><!-- /.blog-post -->
 
-
 <div class='row'>
   <div class="col-xl-offset-4 col-xs-2">
-    <a href="/tweets/<%=@tweet.id%>/edit" class="btn btn-primary btn-block btn-sm" role="button">Edit</a>
+    <a href="/tweets/<%=@tweet.id%>/edit" class="btn btn-primary btn-block btn-sm" role="button">Edit Tweet</a>
   </div>
   <div class="col-xs-2">
-    <form method="post" action="/landmarks/<%=@tweet.id%>/delete">
+    <form method="post" action="/tweets/<%=@tweet.id%>/delete">
       <input id="hidden" type="hidden" name="_method" value="delete">
-      <button type="submit" class="btn btn-danger btn-sm btn-block">Delete</button>
+      <button type="submit" class="btn btn-danger btn-sm btn-block">Delete Tweet</button>
     </form>
 
   </div>
