--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,3 @@
 <h1>Welcome to Fwitter</h1>
+<p>Sign up:<a href='/users/create_user'>sign up link</a><p>
+<p>Login:<a href='/users/login'>login link</a><p>
