--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,9 +1,7 @@
-<!-- # <% if current_user.id == @tweet.user.id %> -->
-<h3>Edit Tweet</h3>
-<form action="/tweets/<%=@tweet.id%>" method="post">
+<h2> Edit Tweet </h2>
 
+<form method="post" action="/tweets/<%=@tweet.id%>">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
   <input type="text" name="content" value="<%= @tweet.content %>">
-
   <input type="submit" value="submit">
 </form>
-<!-- # <%end%> -->
