--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,9 +1,8 @@
-<h3><%= @tweet.content %></h3>
+<p><%= @tweet.content %>
 
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <button type="submit" value="Delete Tweet">Delete Tweet</button>
-  
-  <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
-
+  <input type="submit" value="Delete Tweet">
 </form>
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
