--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,5 +1,5 @@
-
-  <form action="/tweets" method="post">
+<h3>Signup</h3>
+  <form action="/signup" method="post">
     <label>Username:</label>
     <input type="text" name="username" placeholder="username">
 
@@ -9,5 +9,5 @@
     <label>Password:</label>
     <input type="text" name="password" placeholder="password">
 
-    <input type="submit" value="Create User">
+    <input type="submit" value="submit">
   </form>
