--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,5 @@
 <h2>Add a new tweet</h2>
 <form action="/tweets" method="POST">
-  <p>Status: <input type="text" name="content"></p>
+  <input type="text" name="content">
   <input type="submit" value="submit">
 </form>
