--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,6 +1,6 @@
 <h1>Sign up for Fwitter:</h1>
 
-<form action='/tweets' method="post">
+<form action='/signup' method="post">
   <label>name</label>
   <br/>
   <input type="text" name="username">
