--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -2,5 +2,5 @@
   <label>Username: </label><input type="text" name="user[username]">
   <label>Email: </label><input type="text" name="user[email]">
   <label>Password: </label><input type="text" name="user[password]">
-  <input type="submit" value="Signup">
+  <input type="submit" value="Sign Up">
 </form>
