--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,1 +1,5 @@
-login
+<form method="post" action="/login">
+  <label>Username: </label><input type="text" name="username">
+  <label>Password: </label><input type="text" name="password">
+  <input type="submit" value="Log In">
+</form>
