--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,6 +1,6 @@
 <form method="post" action='/signup'>
-  <label>Username: </label><input type="text" name="user[username]">
-  <label>Email: </label><input type="text" name="user[email]">
-  <label>Password: </label><input type="text" name="user[password]">
+  <label>Username: </label><input type="text" name="username">
+  <label>Email: </label><input type="text" name="email">
+  <label>Password: </label><input type="text" name="password">
   <input type="submit" value="Sign Up">
 </form>
