--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -5,6 +5,6 @@
   <input type="text" name="content"></br>
 
 
- <input type="submit" value="Submit">
+ <input type="submit" value="submit">
 
 </form>
