--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,11 +1,7 @@
-<h1>Edit <%= @tweet.content %></h1>
+<h1>Edit Tweet</h1>
 
-<form action="/tweets/<%= @tweet.id %>" method="POST">
+<form method="post" action="/tweets/<%=@tweet.id%>">
   <input type="hidden" name="_method" value="PATCH">
-
-
-  <input type="text" name="content" id="content" value="<%= @tweeet.content %>">
-
-
-  <input type="submit" value="Save">
+  <input type="text" name="content" value="<%= @tweet.content %>">
+  <input type="submit" value="submit">
 </form>
