--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -3,12 +3,14 @@
 <p>Your tweet as it is currently: <%= @tweet.content %></p>
 
 
-<form action="/show_tweet" method="POST">
-    <h3>Edit Tweet <input type="text" id="tweet_id" name="content" value="<%=@tweet.content"></h3>
+<form action="/tweets/<%=@tweet.id%>" method="POST">
+    <h3>Edit Tweet <input type="text" id="tweet_id" name="content" value="<%=@tweet.content%>"></h3>
     <input type="submit" value="submit">
 </form>
 
-<form method="POST" action="/tweets/<%=params[:id]%>/delete">
+<br>
+
+<form method="POST" action="/tweets/<%=@tweet.id%>/delete">
   <input id="hidden" type="hidden" name="_method" value="delete">
-  <input type="submit" id="Delete Tweet">
+  <input type="submit" id="delete" value="Delete Tweet">
 </form>
