--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,5 +1,5 @@
 <h1>Everything you've ever fweeted.</h1>
 
 <%@user.tweets.each do |tweet|%>
-<%= tweet.content %>
+<h2><%= tweet.content %></h2>
 <%end%>
