--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -3,8 +3,8 @@
 <p>Your tweet as it is currently: <%= @tweet.content %></p>
 
 
-<form action="/tweets/<%=@tweet.id%>" method="POST">
-    <h3>Edit Tweet <input type="text" id="tweet_id" name="content" value="<%=@tweet.content%>"></h3>
+<form action="/tweets/<%=@tweet.id%>" method="POST" id="twittertype"> <!--textarea instead of input type="text". value submits, last just displays it in field-->
+    <h3>Edit Tweet <textarea id="tweet_id" name="content" value="<%=@tweet.content%>"><%=@tweet.content%> </textarea></h3>
     <input type="submit" value="submit">
 </form>
 
