--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,10 @@
 <h1>Welcome, <%=@user.username%></h1>
+
+<ul>
+	<li>
+	<% Tweet.all.each { |tweet| %>
+		<h2> <%= tweet.user %> </h2>
+	  <h3> <%= tweet.content %> </h3>
+	<% } %>
+	</li>
+</ul>
