--- a/app/views/users/show_user.erb
+++ b/app/views/users/show_user.erb
@@ -1,12 +1,12 @@
-<h1><%= @user.username %>
+<h1><%= @user.username %></h1>
 
-<h2>All tweets</h2>
+<h2><%= @user.username %>'s tweets</h2>
 
 <ul>
 	<li>
-		<% @user.tweets.each { |tweet| %>
-		  <h3> <%= tweet.content %> <h3>
-		<% } %>
+	<% @user.tweets.each { |tweet| %>
+	  <h3> <%= tweet.content %> <h3>
+	<% } %>
 	</li>
 </ul>
 	
