--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,6 @@
 <h3>Login</h3>
 <form action="/login" method="POST">
-  <p><input type="text" name="username" placeholder="Username:" required></p>
-  <p><input type="password" name="password" placeholder="Password:" required></p>
+  <p><input type="text" name="username" placeholder="Username:" ></p>
+  <p><input type="password" name="password" placeholder="Password:" ></p>
   <p><input type="submit" value="Log In"></p>
 </form>
