--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -3,3 +3,5 @@
   <input type="hidden" name="tweet[user_id]" value="<%=@user.id%>">
   <input type="submit" value="submit">
 </form>
+
+<a href="/logout">Log out</a>
