--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,14 +2,14 @@
 <form class="" action="/signup" method="post">
 
   <label>Username</label>
-  <p><input type="text" name="user[username]" value=""></p>
+  <p><input type="text" name="username" value=""></p>
   <br>
 
   <label>Email</label>
-  <p><input type="text" name="user[email]" value=""></p>
+  <p><input type="text" name="email" value=""></p>
 
   <label>Password</label>
-  <p><input type="text" name="user[password]" value=""></p>
+  <p><input type="text" name="password" value=""></p>
 
   <input type="submit" name="" value="Submit">
 
