--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,10 @@
-show_tweet.erb
+<p><%=@tweet.content%></p>
+<br>
+
+<form action="/tweets/<%=@tweet.id%>/edit">
+    <input type="submit" value ="Edit Tweet">
+</form>
+
+<form action="/tweets/<%=@tweet.id%>/delete">
+    <input type="submit" value ="Delete Tweet">
+</form>
