--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,7 @@
-tweets.erb
+<p>Welcome, You are now logged in and can see all of the tweets.</p>
+      
+<p> Here are all the tweets, <%= @user.username %>
+<% Tweet.all.each do |tweet| %>
+    <p> <%= tweet.content %> </p>
+    <p> <%= tweet.user.username %></p>
+<% end %>
