--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,5 +6,8 @@
   </head>
   <body>
     <h1>Welcome to Fwitter</h1>
+    <a href="/login">Log In</a>
+    <br>
+    <a href="/signup">Sign Up</a>
   </body>
 </html>
