--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -4,5 +4,5 @@
   <label>Password</label>
   <input type="password" id="password" name="password">
 
-  <input type="submit" name="Log In">
+  <input type="submit" value="submit">
 </form>
