--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/singup">
+<form method="post" action="/signup">
   <label>Username</label>
   <input type="text" id="username" name="username">
   <label>Email</label>
