--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,6 +2,10 @@
   <p><%= flash[:error] %></p>
 <% end %>
 
+<% if flash[:notice] %>
+  <p class="notice"><%= flash[:notice] %></p>
+<% end %>
+
 <h1>Log In</h1>
 
 <form action="/login" method="post">
