--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,5 @@
 <h1><%= @user.username %>'s Tweets</h1>
 
 <% @user.tweets.each do |t| %>
-  <h2><%= t.content %></h2>
+  <a href="/tweets/<%= t.id %>"><h2><%= t.content %></h2></a>
 <% end %>
