--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,7 +6,8 @@
     <input type="submit" value ="Edit Tweet">
 </form>
 
-<form action="/tweets/<%=@tweet.id%>/delete" method="GET">
+<form action="/tweets/<%=@tweet.id%>" method="POST">
+    <input type="hidden" name="_method" value="DELETE">
     <input type="submit" value ="Delete Tweet">
 </form>
 
