--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -9,3 +9,6 @@
   <input type="password" name="password" placeholder="password" value=""><br><br>
   <input type="submit" name="" value="Create Account">
 </form>
+
+<br>
+<a href="/login">Click here if you already have an account</a>
