--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,5 +3,7 @@
 <form action="/login" method="post">
   <input type="text" name="username" placeholder="username"><br><br>
   <input type="password" name="password" placeholder="password"><br><br>
-  <input type="submit" name="" placeholder="Create Account"><br><br>
+  <input type="submit" name="" value="submit">
 </form>
+<br>
+<a href='/signup'>Sign Up</a>
