--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -9,5 +9,5 @@
 <form action="/tweets/<%=@tweet.id%>" method="post">
   <input type="hidden" name="_method" value="patch">
   <input type="text" name="content" value="<%=@tweet.content%>" id="content">
-  <input type="submit" name="" value="submit">
+  <input type="submit" value="submit">
 </form>
