--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -12,5 +12,5 @@
 
 <form action="/tweets/<%=@tweet.id%>/delete" method="post">
   <input type="hidden" name="_method" value="delete">
-  <input type="submit" name="delete" value="Delete Tweet">
+  <input type="submit" value="Delete Tweet">
 </form>
