--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,5 +1,9 @@
 <h1>Create Account</h1>
 
+<% unless locals.empty? %>
+  <%= message %>
+<% end %>
+
 <form action="/signup" method="post">
   <label for="username">Username</label><br>
   <input type="text" name="username" placeholder="username" value=""><br><br>
@@ -7,7 +11,7 @@
   <input type="email" name="email" placeholder="email" value=""><br><br>
   <label for="password">Password</label><br>
   <input type="password" name="password" placeholder="password" value=""><br><br>
-  <input type="submit" name="" value="Create Account">
+  <input type="submit" class="btn btn-primary" value="Create Account">
 </form>
 
 <br>
