--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,11 +1,14 @@
-<h1>Sign up for Fwitter</h1>
+<h2>Users</h2>
 
-  <form action="/signup" method="POST">
-    <label><h2>Username</h2></label>
-    <input type="text" name="user[username]" id="username"> </br>
-    <label><h2>Email</h2></label>
-    <input type="email" name="user[email]" id="email"> </br>
-    <label><h2>Password</h2></label>
-    <input type="password" name="user[password_digest]" id="password"> </br>
-    <input type="submit" value="Create Account">
- </form>
+<% unless locals.empty? %>
+  <%= message %>
+<% end %>
+
+
+<h3>Sign Up</h3>
+<form action="/signup" method="POST">
+  <p>Name: <input type="text" name="username"></p>
+  <p>Email: <input type="text" name="email"></p>
+  <p>Password: <input type="text" name="password"></p>
+  <input class="btn btn-primary" type="submit">
+</form
