--- a/app/views/tweets.erb
+++ b/app/views/tweets.erb
@@ -2,6 +2,8 @@
 
 <h4>Here are all the tweets!</h4>
 
+<h5><a href="/tweets/new">Add New Tweet</a><h5><br>
+
 <div>
 	<% @tweets.each do |tweet| %>
 		<p><%= tweet.content %><p>
