--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,6 +1,6 @@
 <h1>Fwitter Login</h1>
 <form action="/login" method="POST">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="password" name="password" placeholder="Password:">
-  <input type="submit" value="submit">
+  <input class="btn btn-default" type="text" name="username" placeholder="Username:">
+  <input class="btn btn-default" type="password" name="password" placeholder="Password:">
+  <input class="btn btn-primary" type="submit" value="submit">
 </form>
