--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -2,8 +2,8 @@
 <h3>Please create a Fwitter account</h3>
 
 <form action="/signup" method="POST">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="email" placeholder="Email:">
-  <input type="password" name="password" placeholder="Password:">
-  <input type="submit" value="Log In">
+  <input class="btn btn-default" type="text" name="username" placeholder="Username:">
+  <input class="btn btn-default" type="text" name="email" placeholder="Email:">
+  <input class="btn btn-default" type="password" name="password" placeholder="Password:">
+  <input class="btn btn-primary" type="submit" value="Log In">
 </form>
