--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,3 +1,6 @@
-<form class="" action="index.html" method="post">
+<form class="" action="/tweets" method="post">
+  <label for="">Content:</label>
+  <input id="content" type="text" name="content" value="">
 
+  <input type="submit" name="submit" value="submit">
 </form>
