--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,11 +2,16 @@
 
 <form class="" action="/tweets/<%= @tweet.id %>/delete" method="post">
   <input type="hidden" name="_method" value="DELETE">
-  Delete Tweet
+  <button type="submit" name="button">
+    Delete Tweet
+  </button>
 </form>
 
 <br>
 
-<button type="button" name="button">
-  <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
-</button>
+<form class="" action="/tweets/<%= @tweet.id %>/edit" method="post">
+  <input type="hidden" name="_method" value="PATCH">
+  <button type="submit" name="button">
+    Edit Tweet
+  </button>
+</form>
