--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,3 +1,6 @@
-<form class="" action="index.html" method="post">
+<form class="" action="/tweets" method="post">
+  <input type="hidden" name="_method" value="PATCH">
+  <input type="text" name="content" value="<%= @tweet.content %>">
 
+  <input type="submit" name="submit" value="submit">
 </form>
