--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,5 +1,5 @@
-<form class="" action="/tweets" method="post">
-  <input type="hidden" name="_method" value="PATCH">
+<form class="" action="/tweets/<%= @tweet.id %>" method="post">
+  <input type="hidden" name="_method" value="patch">
   <input type="text" name="content" value="<%= @tweet.content %>">
 
   <input type="submit" name="submit" value="submit">
