--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,9 +1,9 @@
-<h1>Create a New Tweet</h1>
+<h1>Post a New Tweet:</h1>
 
 <form action="/tweets" method="post">
   Content:
-  <input type="text" id="content" name="content">
+  <input type="text" name="content" required='true'>
   <br></br>
 
-  <input type="submit" value="Tweet">
+  <input type="submit" id='submit' value="Tweet">
 </form>
