--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,3 +1,12 @@
-<h1>Your Tweet</h1>
+<h1><%= @user.username %>'s tweet:</h1>
   <%= @tweet.content %>
-<% end %>
+  <br></br>
+
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <input type='submit' value='Delete Tweet'>
+</form>
+
+<a href="/tweets">Home</a>
