--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,11 +1,3 @@
-<% if flash[:error] %>
-  <%= flash[:error] %>
-<% end %>
-
-<% if flash[:notice] %>
-  <%= flash[:notice] %>
-<% end %>
-
 <h1>Log In</h1>
 
 <form action='/login' method='post'>
@@ -13,5 +5,5 @@
   <br></br>
   Password: <input type='password' name='password'>
   <br></br>
-  <input type='submit' value='Log In'>
+  <input type='submit' id='submit' value='Log In'>
 </form>
