--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,7 @@
-<h1>Log In will come here soon</h1>
+<form action="/login" method="post">
+  <label for="username">Username: </label>
+  <input id="username" type="text" name="username"><br>
+  <label for="password">Password: </label>
+  <input id="password" type="text" name="password"><br>
+  <input type="submit" value="submit">
+</form>
