--- a/app/views/users/create_users.erb
+++ b/app/views/users/create_users.erb
@@ -1,1 +1,10 @@
-testing
+<h3>Sign Up</h3>
+<form action="/signup" method="POST">
+  <input type="text" name="username" placeholder="Username:" />
+  <br />
+  <input type="password" name="password" placeholder="Password:" />
+  <br />
+  <input type="email" name="email" placeholder="Email:" />
+  <br />
+  <input type="submit" value="Create Account" />
+</form>
