--- a/app/views/users/create_users.erb
+++ b/app/views/users/create_users.erb
@@ -1,10 +1,10 @@
 <h3>Sign Up</h3>
 <form action="/signup" method="POST">
-  <input type="text" name="username" placeholder="Username:" />
+  <input type="text" name="user[username]" placeholder="Username:" />
   <br />
-  <input type="password" name="password" placeholder="Password:" />
+  <input type="password" name="user[password]" placeholder="Password:" />
   <br />
-  <input type="email" name="email" placeholder="Email:" />
+  <input type="email" name="user[email]" placeholder="Email:" />
   <br />
   <input type="submit" value="Create Account" />
 </form>
