--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,6 +1,5 @@
-<h1> All the Tweets </h1>
-<!--TODO: <h2> Welcome, <%= current_user.name %> --> 
+<h1> All the Tweets...Need to add Welcome, current_user.name and add each Tweet's username </h1>
 
 <% @tweets.each do |tweet| %>
-  <li><!--TODO: add <%= tweet.user %> --> <a href="/tweets/<%= tweet.id %>"> <%= tweet.content %> </a></li>
+  <li> <a href="/tweets/<%= tweet.id %>"> <%= tweet.content %> </a></li>
 <% end %>
