--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,6 @@
-login stub
+<h3>Login</h3>
+<form action="/login" method="POST">
+  <input type="text" name="user[username]" placeholder="Username:">
+  <input type="password" name="user[password]" placeholder="Password:">
+  <input type="submit" value="Log In">
+</form>
