--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<!--<h1>Login to Fwitter!</h1>-->
+<h1>Login to Fwitter!</h1>
 <form action="/login" method="POST" >
   <input type="text" name="username" placeholder="Username:">
   <input type="text" name="password" placeholder="Password:">
