--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,6 +1,6 @@
 <h1>Create a Tweet</h1>
 
-<form action = "/tweets/new" method = "POST">
+<form action = "/tweets" method = "POST">
   Content: <textarea id = "content" name = "content"></textarea><br><br>
 
   <input type = "submit" value = "submit">
