--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,9 @@
 <h1>User Login</h1>
+<form action="/login" method="POST">
+  <input type="text" name="username" value="Username">
+  <input type="text" name="password" value="Password">
+  <br>
+
+  <input type="submit" value="Login">
+
+</form>
