--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,5 +1,8 @@
-<form action="/tweets/:id" method="post">
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+<form action="/tweets/<%= @tweet.id %>/edit" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  <input type="text" name="content">
+  <label for="name">/tweets/<%= @tweet.id %>/edit Tweet Content</label> <input type="text" name="content" id="name" value="<%= @tweet.content %>">
   <input type="submit" value="submit">
 </form>
