--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <h1>User Login</h1>
 <form action="/login" method="POST">
-  <input type="text" name="username" value="Username">
-  <input type="text" name="password" value="Password">
+  <input type="text" name="username">
+  <input type="text" name="password">
   <br>
 
   <input type="submit" value="Login">
