--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,7 @@
-<h1>User Show Page</h1>
+<h1>User Show Page</h1><br>
+<%=@user.username%> tweets:
+<%@tweets.each do |tweet|%>
+<ul>
+  <li><%=tweet.content%></li>
+</ul>
+<%end%>
