--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,8 @@
 <h1>User Login</h1>
 <form action="/login" method="POST">
+  <label>Username:</label>
   <input type="text" name="username">
+  <label>Password:</label>
   <input type="text" name="password">
   <br>
 
