--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,6 +6,6 @@
   <input type="text" name="password">
   <br>
 
-  <input type="submit" value="Login">
+  <input type="submit" value="submit">
 
 </form>
