--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,2 +1,18 @@
 <h1>Show Tweet</h1>
 <%=@tweet.content%>
+
+<form  action="/tweets/<%=@tweet.id%>" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <label>Delete Tweet</label>
+  <textarea name="content" id="content" rows="4" cols="40">Edit tweet here...
+  </textarea>
+  <input type="submit" value="Edit">
+</form>
+
+<form  action="/tweets/<%=@tweet.id%>" method="post">
+  <input type="hidden" name="_method" value="patch">
+  <label>Edit Tweet</label>
+  <textarea name="content" id="content" rows="4" cols="40">Edit tweet here...
+  </textarea>
+  <input type="submit" value="submit">
+</form>
