--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,18 +1,16 @@
 <h1>Edit Tweet</h1>
 <%=@tweet.content%>
 
+<form  action="/tweets/<%=@tweet.id%/delete>" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <label>Delete Tweet</label>
+  <input type="submit" value="Delete Tweet">
+</form>
+
 <form  action="/tweets/<%=@tweet.id%>/edit" method="POST">
   <input type="hidden" name="_method" value="patch">
   <label>Edit Tweet</label>
   <textarea name="content" rows="4" cols="40">Edit tweet here...
   </textarea>
   <input type="submit" value="submit">
-</form>
-
-<form  action="/tweets/<%=@tweet.id%>" method="post">
-  <input type="hidden" name="_method" value="delete">
-  <label>Delete Tweet</label>
-  <textarea rows="4" cols="40">Edit tweet here...
-  </textarea>
-  <input type="submit" value="Delete Tweet">
 </form>
