--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -6,6 +6,8 @@
   </head>
   <body>
     <h1>Welcome, <%= @user.username %></h1>
-
+    <% @tweets.each do |tweet| %>
+      <%= tweet.content %>
+    <% end %>
   </body>
 </html>
